# arxiv-daily-podcast

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: arxiv-newsletter.yml  test-email.yml
docs/: README.md
my_config/: config.yaml  keywords.yaml  pricing.json
plan/: plan.md
prompt/: prompt_influence_filter.j2  prompt_podcast.j2  prompt_ranking.j2  tts_instructions.txt
scripts/: send_test_email.py
src/ir_arxiv_ranker/: __init__.py  __main__.py  affiliations.py  arxiv_client.py  config.py  emailer.py  influence_filter.py  models.py  output.py  podcast.py  ranking.py  schedule.py  tts.py
src/utils/: __init__.py  call_llm.py  costs.py  naming.py  timezone.py
template/: newsletter.j2
