[project]
name = "ir-arxiv-ranker"
version = "0.1.0"
description = "Rank recent arXiv cs.IR papers using an LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openai>=1.40.0",
  "pypdf>=4.2.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.4",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_arxiv_ranker", "src/utils"]
